switch to network mainnet

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
   beacon-chain:
-    image: "beacon-chain.lighthouse-prater.dnp.dappnode.eth:0.1.0"
+    image: "beacon-chain.lighthouse.dnp.dappnode.eth:0.1.0"
     build:
       context: beacon-chain
       args:
@@ -17,12 +17,12 @@ services:
     environment:
       DEBUG_LEVEL: info
       BEACON_API_PORT: 3500
-      HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
+      HTTP_WEB3PROVIDER: ""
       CORSDOMAIN: "http://lighthouse.dappnode"
       CHECKPOINT_SYNC_URL: ""
       EXTRA_OPTS: ""
   validator:
-    image: "validator.lighthouse-prater.dnp.dappnode.eth:0.1.0"
+    image: "validator.lighthouse.dnp.dappnode.eth:0.1.0"
     build:
       context: validator
       args:
@@ -32,8 +32,8 @@ services:
       - "seccomp:unconfined"
     environment:
       DEBUG_LEVEL: info
-      HTTP_WEB3SIGNER: "http://web3signer.web3signer-prater.dappnode:9000"
-      BEACON_NODE_ADDR: "http://beacon-chain.lighthouse-prater.dappnode:3500"
+      HTTP_WEB3SIGNER: "http://web3signer.web3signer.dappnode:9000"
+      BEACON_NODE_ADDR: "http://beacon-chain.lighthouse.dappnode:3500"
       GRAFFITI: validating_from_DAppNode
       EXTRA_OPTS: ""
       FEE_RECIPIENT_ADDRESS: ""
