--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,10 +1,10 @@
 {
-  "name": "lighthouse-prater.dnp.dappnode.eth",
+  "name": "lighthouse.dnp.dappnode.eth",
   "version": "0.1.0",
   "upstreamVersion": "v2.3.1",
   "architectures": ["linux/amd64"],
   "upstreamRepo": "sigp/lighthouse",
-  "shortDescription": "Lighthouse prater ETH2.0 Beacon chain + validator",
+  "shortDescription": "Lighthouse ETH2.0 Beacon chain + validator",
   "description": "Lighthouse is an Ethereum 2.0 client that connects to other Ethereum 2.0 clients to form a resilient and decentralized proof-of-stake blockchain.",
   "type": "service",
   "author": "DAppNode Association <admin@dappnode.io> (https://github.com/dappnode)",
@@ -21,8 +21,8 @@
     "url": "https://github.com/sigp/lighthouse/issues"
   },
   "links": {
-    "ui": "http://ui.web3signer-prater.dappnode?signer_url=http://web3signer.web3signer-prater.dappnode:9000",
-    "homepage": "https://github.com/dappnode/DAppNodePackage-lighthouse-prater#readme",
+    "ui": "http://ui.web3signer.dappnode?signer_url=http://web3signer.web3signer.dappnode:9000",
+    "homepage": "https://github.com/dappnode/DAppNodePackage-lighthouse#readme",
     "readme": "https://github.com/sigp/lighthouse/blob/stable/README.md",
     "docs": "https://lighthouse-book.sigmaprime.io/"
   },
@@ -36,7 +36,7 @@
     "portNumber": 3500
   },
   "dependencies": {
-    "web3signer-prater.dnp.dappnode.eth": "latest"
+    "web3signer.dnp.dappnode.eth": "latest"
   },
   "warnings": {
     "onRemove": "Make sure your web3signer does not have this client selected! (Packages > web3signer > config > client)"
