--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -26,7 +26,7 @@
     "readme": "https://github.com/sigp/lighthouse/blob/stable/README.md",
     "docs": "https://lighthouse-book.sigmaprime.io/"
   },
-  "license": "GPL-3.0",
+  "license": "Apache-2.0",
   "requirements": {
     "minimumDappnodeVersion": "0.2.51"
   },
