Implement merge changes

--- a/beacon-chain/Dockerfile
+++ b/beacon-chain/Dockerfile
@@ -2,6 +2,7 @@ ARG UPSTREAM_VERSION
 FROM sigp/lighthouse:${UPSTREAM_VERSION}
 
 COPY entrypoint.sh entrypoint.sh
+COPY jwtsecret.hex /jwtsecret
 
 EXPOSE $BEACON_API_PORT
 
