--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - "beacon-data:/root/.lighthouse"
     ports:
-      - 9000/tcp
-      - 9000/udp
+      - "9104:9104/tcp"
+      - "9104:9104/udp"
     restart: unless-stopped
     security_opt:
       - "seccomp:unconfined"
@@ -18,6 +18,7 @@ services:
       DEBUG_LEVEL: info
       BEACON_API_PORT: 3500
       HTTP_WEB3PROVIDER: ""
+      P2P_PORT: 9104
       CORSDOMAIN: "http://lighthouse.dappnode"
       CHECKPOINT_SYNC_URL: ""
       EXTRA_OPTS: ""
