--- a/setup-wizard.yml
+++ b/setup-wizard.yml
@@ -22,6 +22,19 @@ fields:
       - Geth - `http://geth.dappnode:8551` - [Install link](http://my.dappnode/#/installer/geth.dnp.dappnode.eth)
 
       - Nethermind - `http://nethermind.public.dappnode:8551` - [Install link](http://my.dappnode/#/installer/nethermind.public.dappnode.eth)
+  - id: HTTP_WEB3PROVIDER
+    required: true
+    target:
+      type: environment
+      name: HTTP_WEB3PROVIDER
+      service: beacon-chain
+    title: Execution Client endpoint
+    description: >-
+      Consensus clients require access to an execution client. 
+
+      - Geth - `http://geth.dappnode:8545` - [Install link](http://my.dappnode/#/installer/geth.dnp.dappnode.eth)
+
+      - Nethermind - `http://nethermind.public.dappnode:8545` - [Install link](http://my.dappnode/#/installer/nethermind.public.dappnode.eth)
   - id: checkpointSyncUrl
     target:
       type: environment
