--- a/setup-wizard.yml
+++ b/setup-wizard.yml
@@ -1,7 +1,7 @@
 version: "2"
 fields:
   - id: config_mode
-    id: config_mode
+    title: Execution Client Selection Configuration Mode
     description: >-
       Advanced and Development Use Only: Please only enable this option if you are confident you know what you are doing, if you have any doubts, please use the basic setting.
 
