--- a/beacon-chain/Dockerfile
+++ b/beacon-chain/Dockerfile
@@ -1,6 +1,7 @@
 ARG UPSTREAM_VERSION
 FROM sigp/lighthouse:${UPSTREAM_VERSION}-modern
 
+RUN apt-get update && apt-get install curl --yes
 COPY entrypoint.sh entrypoint.sh
 COPY jwtsecret.hex /jwtsecret
 
