--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -40,5 +40,15 @@
   },
   "warnings": {
     "onRemove": "Make sure your web3signer does not have this client selected! (Packages > web3signer > config > client)"
-  }
+  },
+  "globalEnvs": [
+    {
+      "envs": ["EXECUTION_CLIENT_MAINNET", "MEVBOOST_MAINNET"],
+      "services": ["beacon-chain"]
+    },
+    {
+      "envs": ["MEVBOOST_MAINNET"],
+      "services": ["validator"]
+    }
+  ]
 }
