set besu as public

--- a/releases.json
+++ b/releases.json
@@ -1,8 +1,8 @@
 {
   "0.1.0": {
-    "hash": "/ipfs/QmRpQN9daK1m5WpdDNCrLvatFctG7VZuCiY87DvVtsar2E",
+    "hash": "/ipfs/QmTH6amVgYNYA6Yh34Mc2CNBAQVVLJLdw574Czrneqkfq5",
     "uploadedTo": {
-      "dappnode": "Fri, 03 Dec 2021 21:37:59 GMT"
+      "http://172.33.1.5:5001": "Mon, 07 Nov 2022 10:21:00 GMT"
     }
   }
 }
