--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: beacon-chain
       args:
-        UPSTREAM_VERSION: v3.3.0
+        UPSTREAM_VERSION: v3.4.0-tree.1
     volumes:
       - "beacon-data:/root/.lighthouse"
     ports:
@@ -26,7 +26,7 @@ services:
     build:
       context: validator
       args:
-        UPSTREAM_VERSION: v3.3.0
+        UPSTREAM_VERSION: v3.4.0-tree.1
     restart: unless-stopped
     security_opt:
       - "seccomp:unconfined"
