update staking brain UI link and remove warning

--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/dappnode/DAppNodePackage-lighthouse/issues"
   },
   "links": {
-    "ui": "http://ui.web3signer.dappnode?signer_url=http://web3signer.web3signer.dappnode:9000",
+    "ui": "http://brain.web3signer.dappnode",
     "homepage": "https://github.com/dappnode/DAppNodePackage-lighthouse#readme",
     "readme": "https://github.com/sigp/lighthouse/blob/stable/README.md",
     "docs": "https://lighthouse-book.sigmaprime.io/"
@@ -36,7 +36,7 @@
     "portNumber": 3500
   },
   "warnings": {
-    "onRemove": "Make sure your web3signer does not have this client selected! (Packages > web3signer > config > client)"
+    "onRemove": "Make sure your StakersUI does not have this client selected! Double check in the Stakers Tab in the left NavBar"
   },
   "globalEnvs": [
     {
