--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,7 +1,7 @@
 {
   "name": "lighthouse.dnp.dappnode.eth",
   "version": "0.1.0",
-  "upstreamVersion": "v4.0.1",
+  "upstreamVersion": "v4.0.2-rc.0",
   "architectures": ["linux/amd64"],
   "upstreamRepo": "sigp/lighthouse",
   "shortDescription": "Lighthouse ETH2.0 Beacon chain + validator",
